# mrm

./: .gitignore  LICENSE  Makefile  README.md  SCAN.md  config.toml
crates/mrm/: Cargo.toml
crates/mrm/src/: app.rs  config.rs  cover_cache.rs  db.rs  main.rs  notifier.rs  types.rs
crates/mrm/src/scraper/: asura.rs  coordinator.rs  mangack.rs  mangadex.rs  mod.rs
crates/mrm/src/ui/: detail.rs  discover.rs  library.rs  mod.rs  search.rs
scraper/: asura_bridge.py  config.py  daemon.py  db.py  get_images.py  requirements.txt
scraper/scrapers/: asura.py  base.py  mangack.py  mangadex.py
